created connection with zelda api and save in firebase

--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 APP_ENV=development
+
+ZELDA_API="https://zelda.fanapis.com/api/"
+
+FIREBASE_URI="https://zelda-guide-default-rtdb.firebaseio.com/"
