fixing the new environment

--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ APP_ENV=development
 
 ZELDA_API="https://zelda.fanapis.com/api/"
 
-FIREBASE_URI="https://zelda-guide-default-rtdb.firebaseio.com/"
+FIREBASE_URI="https://zelda-guide.firebaseio.com/"
