--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,18 @@
+anyio==4.2.0
+certifi==2023.11.17
+charset-normalizer==3.3.2
+click==8.1.7
+coverage==7.4.0
 fastapi==0.95.1
+h11==0.14.0
 httpcore==0.17.0
+httptools==0.6.1
 httpx==0.24.0
+idna==3.6
+iniconfig==2.0.0
 mock==5.0.2
+packaging==23.2
+pluggy==1.3.0
 pydantic==1.10.7
 pytest==7.3.1
 pytest-asyncio==0.18.3
@@ -11,5 +22,16 @@ python-dateutil==2.8.2
 python-dotenv==1.0.0
 python-magic==0.4.27
 python-multipart==0.0.6
+PyYAML==6.0.1
 requests==2.30.0
 responses==0.23.0
+six==1.16.0
+sniffio==1.3.0
+starlette==0.26.1
+types-PyYAML==6.0.12.12
+typing_extensions==4.9.0
+urllib3==2.1.0
+uvicorn==0.27.0
+uvloop==0.19.0
+watchfiles==0.21.0
+websockets==12.0
