Criando estrutura para interagir com banco de Dados

--- a/.env
+++ b/.env
@@ -1,5 +1,3 @@
 APP_ENV=development
-
 ZELDA_API="https://zelda.fanapis.com/api/"
-
-FIREBASE_URI="https://zelda-guide.firebaseio.com/"
+DATABASE_URL="postgresql://postgres:7274@localhost:5432/db_wiki_zelda"
